Fix Short URL generation
- The salt is now correctly loaded from the configuration file.
- Short URLs are now prefixed with the domain (e.g "s1" becomes "https://vh7.uk/s1") on all API endpoints
- Base URL has been removed from frontend Vue and moved to backend (see above)

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -176,7 +176,6 @@
         var app = new Vue({
             el: "#app",
             data: {
-                domain: "http://localhost:8080/",
                 apiBase: "/api/v1",
                 tab: "shorten",
                 shorten: {
@@ -219,7 +218,7 @@
                     }).then((response) => {
                         this.result.show = true;
                         console.log(response);
-                        this.result.link = this.domain + response.data.shortLink;
+                        this.result.link = response.data.shortLink;
                     }).catch(this.requestErrorHandler);
                     e.preventDefault();
                 },
