Make frontend fancy
Fixes #2

--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -14,6 +14,7 @@
     {% block content %}{% endblock %}
 
     {% block footer %}
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     {% endblock %}
   </body>
 </html>
