--- a/templates/nav.jinja2
+++ b/templates/nav.jinja2
@@ -10,11 +10,11 @@
   </div>
 
   <div id="navbar" class="navbar-menu">
-      <a class="navbar-item">
+      <a class="navbar-item" href="/">
         Home
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="https://github.com/jake-walker/vh7/wiki/API" target="_blank">
         Documentation
       </a>
     </div>
