Add download preview page
Fixes #5

--- a/templates/nav.jinja2
+++ b/templates/nav.jinja2
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">VH7 &nbsp; <span class="tag is-warning">Beta</span></a>
 
@@ -10,6 +10,7 @@
   </div>
 
   <div id="navbar" class="navbar-menu">
+    <div class="navbar-start">
       <a class="navbar-item" href="/">
         Home
       </a>
@@ -18,4 +19,21 @@
         Documentation
       </a>
     </div>
+</div>
 </nav>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+        if ($navbarBurgers.length > 0) {
+            $navbarBurgers.forEach( el => {
+                el.addEventListener('click', () => {
+                    const target = el.dataset.target;
+                    const $target = document.getElementById(target);
+                    el.classList.toggle('is-active');
+                    $target.classList.toggle('is-active');
+                });
+            });
+        }
+    });
+</script>
