Add SEO meta tags to download and paste pages (#13)

--- a/templates/paste.jinja2
+++ b/templates/paste.jinja2
@@ -1,6 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block title %}Paste - VH7 Beta{% endblock %}
+{% block desc %}Paste from VH7.{% endblock %}
 
 {% block content %}
     {% include "nav.jinja2" %}
