--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -16,23 +16,31 @@
     <meta name="msapplication-config" content="/static/browserconfig.xml">
     <meta name="theme-color" content="#35dde8">
 
+    {%- macro meta_title() -%}
+        {% block title %}VH7 Beta{% endblock %}
+    {%- endmacro -%}
+
+    {%- macro meta_description() -%}
+        {% block desc %}A free and open source URL shortening, file sharing and pastebin service.{% endblock %}
+    {%- endmacro -%}
+
     <!-- primary meta tags -->
-    <title>{% block title %}{% endblock %}</title>
-    <meta name="title" content="VH7">
-    <meta name="description" content="A free and open source URL shortening, file sharing and pastebin service.">
+    <title>{{ meta_title() }}</title>
+    <meta name="title" content="{{ meta_title() }}">
+    <meta name="description" content="{{ meta_description() }}">
 
     <!-- open graph/facebook meta tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://vh7.uk/">
-    <meta property="og:title" content="VH7">
-    <meta property="og:description" content="A free and open source URL shortening, file sharing and pastebin service.">
+    <meta property="og:title" content="{{ meta_title() }}">
+    <meta property="og:description" content="{{ meta_description() }}">
     <meta property="og:image" content="https://vh7.uk/static/meta.png">
 
     <!-- twitter meta tags -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://vh7.uk/">
-    <meta property="twitter:title" content="VH7">
-    <meta property="twitter:description" content="A free and open source URL shortening, file sharing and pastebin service.">
+    <meta property="twitter:title" content="{{ meta_title() }}">
+    <meta property="twitter:description" content="{{ meta_description() }}">
     <meta property="twitter:image" content="https://vh7.uk/static/meta.png">
 
     <!-- css -->
