--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -5,8 +5,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="/static/css/bulma.min.css">
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
+    <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#01b5f4">
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <meta name="msapplication-TileColor" content="#1946c3">
+    <meta name="msapplication-config" content="/static/browserconfig.xml">
+    <meta name="theme-color" content="#35dde8">
+
+    {%- macro meta_title() -%}
+        {% block title %}VH7 Beta{% endblock %}
+    {%- endmacro -%}
+
+    {%- macro meta_description() -%}
+        {% block desc %}A free and open source URL shortening, file sharing and pastebin service.{% endblock %}
+    {%- endmacro -%}
+
+    <!-- primary meta tags -->
+    <title>{{ meta_title() }}</title>
+    <meta name="title" content="{{ meta_title() }}">
+    <meta name="description" content="{{ meta_description() }}">
+
+    <!-- open graph/facebook meta tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vh7.uk/">
+    <meta property="og:title" content="{{ meta_title() }}">
+    <meta property="og:description" content="{{ meta_description() }}">
+    <meta property="og:image" content="https://vh7.uk/static/meta.png">
+
+    <!-- twitter meta tags -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://vh7.uk/">
+    <meta property="twitter:title" content="{{ meta_title() }}">
+    <meta property="twitter:description" content="{{ meta_description() }}">
+    <meta property="twitter:image" content="https://vh7.uk/static/meta.png">
+
+    <!-- css -->
+    <link rel="stylesheet" href="/static/css/bulma.css">
     <link rel="stylesheet" href="/static/fa/css/all.min.css">
     {% endblock %}
   </head>
@@ -15,6 +53,21 @@
 
     {% block footer %}
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+            if ($navbarBurgers.length > 0) {
+                $navbarBurgers.forEach( el => {
+                    el.addEventListener('click', () => {
+                        const target = el.dataset.target;
+                        const $target = document.getElementById(target);
+                        el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+                    });
+                });
+            }
+        });
+    </script>
     {% endblock %}
   </body>
 </html>
