--- a/templates/paste.jinja2
+++ b/templates/paste.jinja2
@@ -3,6 +3,11 @@
 {% block title %}Paste - VH7 Beta{% endblock %}
 {% block desc %}Paste from VH7.{% endblock %}
 
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/styles/atom-one-light.min.css">
+{% endblock %}
+
 {% block content %}
     {% include "nav.jinja2" %}
 
@@ -10,7 +15,15 @@
         <div class="container">
             <h1 class="is-size-2">Paste</h1>
             <p><b>Language:</b> {{ paste.language|e }}</p>
-            <pre style="background: #eee;"><code>{{ paste.code|e }}</code></pre>
+            <pre><code class="lang-{{ paste.language|e }}">{{ paste.code|e }}</code></pre>
         </div>
     </section>
+{% endblock %}
+
+{% block footer %}
+    {{ super() }}
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/highlight.min.js"></script>
+    <script>
+        hljs.initHighlightingOnLoad();
+    </script>
 {% endblock %}
