Add button icons

--- a/templates/download.jinja2
+++ b/templates/download.jinja2
@@ -29,7 +29,12 @@
                 </div>
             </article>
 
-            <a class="button is-primary" href="?dl=1">Download</a>
+            <a class="button is-primary" href="?dl=1">
+                <span class="icon">
+                    <i class="fas fa-download"></i>
+                </span>
+                <span>Download</span>
+            </a>
         </div>
     </section>
 {% endblock %}
