--- a/templates/home.jinja2
+++ b/templates/home.jinja2
@@ -81,7 +81,12 @@
                 </div>
                 <div class="field">
                     <div class="control">
-                        <button type="submit" class="button is-primary" :disabled="disableSubmit">Shorten</button>
+                        <button type="submit" class="button is-primary" :disabled="disableSubmit">
+                            <span class="icon">
+                                <i class="fas fa-paper-plane"></i>
+                            </span>
+                            <span>Shorten</span>
+                        </button>
                     </div>
                 </div>
             </form>
@@ -114,7 +119,12 @@
                 </div>
                 <div class="field">
                     <div class="control">
-                        <button type="submit" class="button is-primary" :disabled="disableSubmit">Paste</button>
+                        <button type="submit" class="button is-primary" :disabled="disableSubmit">
+                            <span class="icon">
+                                <i class="fas fa-paper-plane"></i>
+                            </span>
+                            <span>Paste</span>
+                        </button>
                     </div>
                 </div>
             </form>
@@ -155,7 +165,12 @@
                 </div>
                 <div class="field">
                     <div class="control">
-                        <button type="submit" class="button is-primary" :disabled="disableSubmit">Upload</button>
+                        <button type="submit" class="button is-primary" :disabled="disableSubmit">
+                            <span class="icon">
+                                <i class="fas fa-paper-plane"></i>
+                            </span>
+                            <span>Upload</span>
+                        </button>
                     </div>
                 </div>
             </form>
