--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#35dde8">
 
     {%- macro meta_title() -%}
-        {% block title %}VH7 Beta{% endblock %}
+        {% block title %}VH7{% endblock %}
     {%- endmacro -%}
 
     {%- macro meta_description() -%}
