--- a/templates/download.jinja2
+++ b/templates/download.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Download - VH7 Beta{% endblock %}
+{% block title %}Download - VH7{% endblock %}
 {% block desc %}Download '{{ upload.original_filename|e }}' from VH7. Expires {{ upload.expires.strftime("%H:%m %d/%m/%Y") }}.{% endblock %}
 
 {% block content %}
