--- a/templates/home.jinja2
+++ b/templates/home.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}VH7 Beta{% endblock %}
+{% block title %}VH7{% endblock %}
 
 {% block content %}
 <div id="app">
@@ -11,7 +11,7 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    VH7 <span class="tag is-warning">Beta</span>
+                    VH7
                 </h1>
                 <h2 class="subtitle">
                     A free and open source <u>URL shortening</u>, <u>file sharing</u> and <u>pastebin</u> service.
