--- a/templates/paste.jinja2
+++ b/templates/paste.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Paste - VH7 Beta{% endblock %}
+{% block title %}Paste - VH7{% endblock %}
 {% block desc %}Paste from VH7.{% endblock %}
 
 {% block head %}
