--- a/templates/footer.jinja2
+++ b/templates/footer.jinja2
@@ -1,8 +1,11 @@
 <footer class="footer wrap-footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>VH7</strong>. The source code is licensed under
-      <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL v3.0</a> and available on <a href="https://github.com/jake-walker/vh7">GitHub</a>.
-    </p>
-  </div>
+    <div class="content has-text-centered">
+        <p class="is-marginless">
+            <strong>VH7</strong>. The source code is licensed under
+            <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL v3.0</a> and available on <a href="https://github.com/jake-walker/vh7">GitHub</a>.
+        </p>
+        <p class="is-size-7">
+            Version: {{ config.VERSION }}
+        </p>
+    </div>
 </footer>
