--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -31,17 +31,17 @@
 
     <!-- open graph/facebook meta tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://vh7.uk/">
+    <meta property="og:url" content="{{ config.INSTANCE_URL }}">
     <meta property="og:title" content="{{ meta_title() }}">
     <meta property="og:description" content="{{ meta_description() }}">
-    <meta property="og:image" content="https://vh7.uk/static/meta.png">
+    <meta property="og:image" content="{{ config.INSTANCE_URL }}static/meta.png">
 
     <!-- twitter meta tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://vh7.uk/">
+    <meta property="twitter:url" content="{{ config.INSTANCE_URL }}">
     <meta property="twitter:title" content="{{ meta_title() }}">
     <meta property="twitter:description" content="{{ meta_description() }}">
-    <meta property="twitter:image" content="https://vh7.uk/static/meta.png">
+    <meta property="twitter:image" content="{{ config.INSTANCE_URL }}static/meta.png">
 
     <!-- css -->
     <link rel="stylesheet" href="/static/css/bulma.css">
