--- a/templates/users/login.jinja2
+++ b/templates/users/login.jinja2
@@ -14,6 +14,7 @@
                 {{ form.csrf_token }}
                 {{ render_field(form.username, placeholder="Username") }}
                 {{ render_field(form.password, placeholder="Password") }}
+                {{ render_field(form.remember_me) }}
                 <div class="field">
                     <div class="control">
                         <button type="submit" class="button is-primary">Login</button>
