Add features section to main page

--- a/templates/home.jinja2
+++ b/templates/home.jinja2
@@ -178,6 +178,28 @@
             </form>
         </div>
     </section>
+
+    <section class="section">
+        <div class="container has-text-centered">
+            <h2 class="title">Features</h2>
+            <div class="columns">
+                <div class="column content">
+                    <h2 class="subtitle is-4">Open Source</h2>
+                    <p>All of VH7's source code is available on <a href="https://github.com/jake-walker/vh7">GitHub</a> for everyone to see how VH7 works and contribute.</p>
+                    <a href="https://github.com/jake-walker/vh7" class="button is-link is-small">View Source Code</a>
+                </div>
+                <div class="column content">
+                    <h2 class="subtitle is-4">API</h2>
+                    <p>VH7 has an easy to use API which can be easily integrated into your own applications.</p>
+                    <a href="https://github.com/jake-walker/vh7/wiki/API" class="button is-link is-small">View API documentation</a>
+                </div>
+                <div class="column content">
+                    <h2 class="subtitle is-4">Super Short Links</h2>
+                    <p>VH7 has much shorter links compared to larger URL shorteners.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 {% endblock %}
 
