--- a/templates/users/login.jinja2
+++ b/templates/users/login.jinja2
@@ -10,7 +10,7 @@
 
             {% include "partials/flash.jinja2" %}
 
-            <form action="{{ url_for('users.login') }}" method="post">
+            <form action="{{ url_for('users.login', next=request.args.get('next')) }}" method="post">
                 {{ form.csrf_token }}
                 {{ render_field(form.username, placeholder="Username") }}
                 {{ render_field(form.password, placeholder="Password") }}
