--- a/templates/partials/nav.jinja2
+++ b/templates/partials/nav.jinja2
@@ -36,6 +36,9 @@
                         <a class="navbar-item">
                             My Account
                         </a>
+                        <a class="navbar-item" href="/links">
+                            My Short Links
+                        </a>
                         <hr class="navbar-divider">
                         <a class="navbar-item" href="/logout">
                             Logout
