--- a/templates/users/links.jinja2
+++ b/templates/users/links.jinja2
@@ -48,15 +48,15 @@
                             <p>
                                 <ul>
                                     <li><b>Type:</b> {{ link.get_type() }}</li>
-                                    <li><b>Created:</b> {{ link.created.strftime("%H:%m %d/%m/%Y") }}</li>
-                                    <li><b>Updated:</b> {{ link.updated.strftime("%H:%m %d/%m/%Y") }}</li>
+                                    <li><b>Created:</b> {{ link.created.strftime("%H:%M %d/%m/%Y") }}</li>
+                                    <li><b>Updated:</b> {{ link.updated.strftime("%H:%M %d/%m/%Y") }}</li>
                                     {% if link.get_type() == "url" %}
                                         <li><b>URL:</b> {{ link.url.url }}</li>
                                     {% elif link.get_type() == "paste" %}
                                         <li><b>Language:</b> {{ link.paste.language_info().name }}</li>
                                     {% elif link.get_type() == "upload" %}
                                         <li><b>Filename:</b> {{ link.upload.original_filename | e }}</li>
-                                        <li><b>Expires:</b> {{ link.upload.expires.strftime("%H:%m %d/%m/%Y") }}</li>
+                                        <li><b>Expires:</b> {{ link.upload.expires.strftime("%H:%M %d/%m/%Y") }}</li>
                                         <li><b>SHA256 Hash:</b> <code>{{ link.upload.hash }}</code></li>
                                         <li><b>File Type:</b> {{ link.upload.mimetype | e }}</li>
                                     {% endif %}
